--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vue-im",
+    "name": "chat",
     "version": "1.0.0",
     "description": "A Vue.js project",
     "author": "polk6",
